--- a/css/default.css
+++ b/css/default.css
@@ -14,7 +14,7 @@
 /* 루트 요소의 기본 글자크기 설정 */
 html {
   font-size: 10px;
-  overflow-y: visible;
+  overflow-y: visible;  /* 세로로 스크롤 바 */
 }
 
 /* 기본 박스사이징 설정 */
@@ -39,12 +39,7 @@ body {
   font-size: 1.6rem;
   font-weight: 400;
   background-color: #fff;
-}
-
-/* 내비게이션 내 기본 링크 스타일 */
-nav a {
-  color: inherit;
-  text-decoration: none;
+  color: #181818;
 }
 
 /* a 요소 내 이미지에 발생하는 갭 제게 */
