--- a/style/common.css
+++ b/style/common.css
@@ -11,21 +11,33 @@ body {
 /* 헤더 */
 /* 공통 헤더 */
 .app-header-container {
-  background-color: yellow;
 }
 .app-header {
-  background-color: pink;
+  background-color: #fff;
   display: flex;
   justify-content: space-between;
   flex-flow: row nowrap;
   align-items: center;
 }
+ /* 공통 로고 */
+ .brand {
+  width: 176px;
+  /* height: 14px; */
+  font-size: 14px;
+  padding: 18px;
+  margin: 0;
+}
+.brand a {
+  display: block;
+}
 @media all and (max-width: 767px) {
   /* 모바일 헤더 */
+ 
   /* 햄버거 메뉴 */
   .is-open-menu {
     width: 50px;
     height: 50px;
+    padding: 18px 16px;
     background-color: transparent;
     padding: 0;
   }
@@ -33,17 +45,49 @@ body {
     display: inline-block;
     width: 100%;
     height: 100%;
-    background: violet url(./../images/button-navigation.svg) no-repeat 50% 50%;
+    background: url(./../images/button-navigation.svg) no-repeat 50% 50%;
   }
   /* 모바일 내비게이션 */
   .app-navigation {
-    display: none;
-    background-color: lightgreen;
+    backdrop-filter: blur(5px);
+    transform: translateX(105vw);
+    background: hsla(225, 57%, 10%, 0.9);
+    color: #fefefe;
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
+    padding-top: 66px;
+    transition: all 0.2s;
+  }
+  .app-navigation li {
+    border-bottom: 1px solid hsla(225, 57%, 30%, 0.5);
+  }
+  .app-navigation li:last-child {
+    border-bottom: 0;
+  }
+  .app-navigation a {
+    display: block;
+    padding: 12px 22px;
+    transition: all 0.4s ease;
+  }
+  .app-navigation a:hover,
+  .app-navigation a:focus {
+    background: #2e437c;
+  }
+  .is-close-menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    color: #fefefe;
+    font-size: 2rem;
+  }
+  .is--active .app-navigation {
+    transform: none;    /* 트랜스폼 시키지 않으니까 원래자리로 돌아옴 */
   }
 }
 @media all and (min-width: 768px) {
@@ -64,5 +108,9 @@ body {
   .app-navigation ul {
     display: flex;
     flex-flow: row nowrap;
+  }
+  .app-navigation li {
+    margin-left: 8px;
+    color: #24388D;
   }
 }
