--- a/style/home.css
+++ b/style/home.css
@@ -58,7 +58,30 @@
   color: var(--theme-primary);
   border: 1px solid currentColor;
 }
-
+/* 유튜브 영상 섹션 */
+.ediya-youtube {
+  background: yellow;
+}
+.ediya-youtube-wrapper {
+  margin: 0;
+}
+.iframe-wrapper {
+  width: 100%;
+  position: relative;
+}
+.iframe4-3 {
+  padding-top: 75%;
+}
+.iframe16-9 {
+  padding-top: 56.25%;
+}
+.iframe-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 @media all and (max-width: 767px) {
   /* 모바일 추천 음료 */
