--- a/style/variable.css
+++ b/style/variable.css
@@ -1,7 +1,11 @@
 /* 색상 변수 */
 :root {
   --theme-bright: #fff;
+  --theme-bright2: #f5f5f5;
   --theme-default: #14182c;
   --theme-primary: #24388d;
   --theme-secondary: #bae5fb;
+  --theme-disable: #878787;
+  --color-gradient-start: #263d83;
+  --color-gradient-end: #102457;
 }
