이디야 음료 1/2단 레이아웃

--- a/style/style.css
+++ b/style/style.css
@@ -6,3 +6,5 @@
 @import url(./common.css);
 @import url(./home.css);
 @import url(./member.css);
+/* @import url(./member-practice.css); */
+@import url(./beverage.css);
