언론속 이디야 일부 디자인

--- a/style/style.css
+++ b/style/style.css
@@ -8,3 +8,5 @@
 @import url(./member.css);
 /* @import url(./member-practice.css); */
 @import url(./beverage.css);
+/* @import url(./news-practice.css); */
+@import url(./news.css);
